commiting project1 final

--- a/spam_detector.ipynb
+++ b/spam_detector.ipynb
@@ -379,7 +379,7 @@
    ],
    "source": [
     "# Fit the Standard Scaler with the training data\n",
-    "SS.fit(X_train,y_train)"
+    "SS.fit(X_train)"
    ]
   },
   {
@@ -411,7 +411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Model Score: 0.9292753623188406\n"
+      "Logistic Regression Model Score: 0.9278260869565217\n"
      ]
     }
    ],
@@ -454,7 +454,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9322328410078193"
+       "0.9261511728931364"
       ]
      },
      "execution_count": 11,
@@ -485,7 +485,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Model Score: 0.9994202898550725\n"
+      "Random Forest Model Score: 0.9997101449275362\n"
      ]
     }
    ],
@@ -529,7 +529,7 @@
     {
      "data": {
       "text/plain": [
-       "0.950477845351868"
+       "0.952215464813206"
       ]
      },
      "execution_count": 14,
@@ -550,7 +550,7 @@
     {
      "data": {
       "text/plain": [
-       "0.018245004344048632"
+       "0.026064291920069538"
       ]
      },
      "execution_count": 15,
@@ -575,7 +575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Random Forest Classifier model performed a little bit better than the Logistic Regression model, in line with expectations. However, what is rather ironic is that the RFC model appears to have overfitted by training data judging by the 99.9% accuracy score versus 93.2% for the LR model. The LR scored better on the testing data than the training whereas the RFC scored better on the training data."
+    "The Random Forest Classifier model performed a little bit better than the Logistic Regression model, in line with expectations. However, what is rather ironic is that the RFC model appears to have overfitted by training data judging by the 99.9% accuracy score versus 92.8% for the LR model. The LR scored about as good on the testing data as the training whereas the RFC scored better on the training data."
    ]
   },
   {
